--- a/Default.htm
+++ b/Default.htm
@@ -43,8 +43,11 @@
         <div id="matrixfooter" >
             <div class="meter">
                 <span id="progress" style="width: 0%"></span>
-                <div id="MenuButton" class="menubutton"><p>Menu</p></div>
-                <div id="StopButton" class="stopbutton"><p>Stop</p></div>
+                <div id="ButtonGroup" class="ButtonGroup">
+                    <div id="StopButton" class="stopbutton"><p>Stop</p></div>
+                    <div id="MenuButton" class="menubutton"><p>Menu</p></div>
+                    <div id="ShuffleButton" class="shufflebutton"><p>Shuffle</p></div>
+                </div>
             </div>
             
         </div>
