Adjust timer visibility and cell sizing

--- a/Index.htm
+++ b/Index.htm
@@ -214,7 +214,7 @@
                 <table id="MatrixTable" class="MatrixTable"></table>
             </div>
             <div id="matrixfooter" class="matrixfooter" >
-                <div class="meter">
+                <div id="timerMeter" class="meter">
                     <span id="progress" style="width: 0%"></span>
                 </div>
                 <div id="ButtonGroup" class="ButtonGroup">
