Improve main menu visibility and leaderboard visuals

--- a/Index.htm
+++ b/Index.htm
@@ -59,6 +59,7 @@
                             2
                             </div>
                             <div id="item2_pic" class="top3_pic" style="background-image: url('lucy.png')"></div>
+                            <div id="item2_pic2" class="top3_pic2 silver" style="background-image: url('trophy_2nd.svg')"></div>
                             <div id="item2_name" class="top3_name">
                             RANK2
                             </div>
@@ -71,7 +72,7 @@
                             1
                             </div>
                             <div id="item1_pic"  class="top3_pic" style="background-image: url('lucy.png')"></div>
-                            <div id="item1_pic2"  class="top3_pic2" style="background-image: url('trophy_1st.png')"></div>
+                            <div id="item1_pic2"  class="top3_pic2 gold" style="background-image: url('trophy_1st.png')"></div>
                             <div id="item1_name" class="top3_name">
                             RANK1
                             </div>
