Integrate player management controls

--- a/Index.htm
+++ b/Index.htm
@@ -217,7 +217,11 @@
                 <div class="selected-player__details">
                     <p class="eyebrow">Selected player</p>
                     <h3 id="selectedPlayerName" class="selected-player__name">No player selected</h3>
-                    <p class="helper-text small">Add or choose a player to start playing.</p>
+                    <p class="helper-text small">Create or change players directly from here.</p>
+                    <div class="selected-player__actions">
+                        <button id="selectedCreatePlayer" class="chip-button"><span>CREATE PLAYER</span></button>
+                        <button id="selectedChangePlayer" class="chip-button ghost"><span>CHANGE PLAYER</span></button>
+                    </div>
                 </div>
             </div>
             <div id="mainMenuItems" class="menu-grid">
@@ -225,9 +229,7 @@
                     <button id="beattheclock" class="menu-button primary"><span>BEAT THE CLOCK</span></button>
                     <button id="rankings" class="menu-button secondary"><span>RANKINGS</span></button>
                     <button id="clearRankings" class="menu-button ghost"><span>CLEAR RANKINGS</span></button>
-                    <button id="createPlayer" class="menu-button secondary"><span>CREATE PLAYER</span></button>
                     <button id="clearPlayers" class="menu-button ghost"><span>CLEAR PLAYERS</span></button>
-                    <button id="selectPlayer" class="menu-button secondary hidden"><span>SELECT PLAYER</span></button>
                   </div>
         </div>
         </div>
