--- a/Index.html
+++ b/Index.html
@@ -54,60 +54,25 @@
                     </div>
                     <div class="top3">
                         <div class="two item" id="RankItem2">
-                            <div class="top3_pos">
-                            2
-                            </div>
-                            <div id="item2_pic" class="top3_pic" style="background-image: url('lucy.png')"></div>
+                            <div class="top3_pos">2</div>
+                            <div id="item2_pic" class="top3_pic"></div>
                             <div id="item2_pic2" class="top3_pic2 silver" style="background-image: url('trophy_2nd.svg')"></div>
-                            <div id="item2_name" class="top3_name">
-                            RANK2
-                            </div>
-                            <div id="item2_score" class="top3_score">
-                            100%
-                            </div>
+                            <div id="item2_name" class="top3_name">RANK2</div>
+                            <div id="item2_score" class="top3_score">100%</div>
                         </div>
                         <div class="one item" id="RankItem1">
-                            <div class="top3_pos">
-                            1
-                            </div>
-                            <div id="item1_pic"  class="top3_pic" style="background-image: url('lucy.png')"></div>
-                            <div id="item1_pic2"  class="top3_pic2 gold" style="background-image: url('trophy_1st.png')"></div>
-                            <div id="item1_name" class="top3_name">
-                            RANK1
-                            </div>
-                            <div id="item1_score" class="top3_score">
-                            100%
-                            </div>
+                            <div class="top3_pos">1</div>
+                            <div id="item1_pic" class="top3_pic"></div>
+                            <div id="item1_pic2" class="top3_pic2 gold" style="background-image: url('trophy_1st.png')"></div>
+                            <div id="item1_name" class="top3_name">RANK1</div>
+                            <div id="item1_score" class="top3_score">100%</div>
                         </div>
-                        <div id="item2_score" class="top3_score">
-                        100%
-                            </div>
-                        </div>
-                    <div class="one item" id="RankItem1">
-                        <div class="top3_pos">
-                        1
-                        </div>
-                        <div id="item1_pic"  class="top3_pic"></div>
-                        <div id="item1_pic2"  class="top3_pic2" style="background-image: url('trophy_1st.png')"></div>
-                        <div id="item1_name" class="top3_name">
-                        RANK1
-                        </div>
-                        <div id="item1_score" class="top3_score">
-                        100%
-                            </div>
-                        </div>
-                    <div class="three item" id="RankItem3">
-                        <div class="top3_pos">
-                        3
-                        </div>
-                        <div id="item3_pic" class="top3_pic"></div>
-                        <div id="item3_pic2"  class="top3_pic2 bronze-trophy"></div>
-                        <div id="item3_name" class="top3_name">
-                        RANK3
-                        </div>
-                        <div id="item3_score" class="top3_score">
-                        100%
-                            </div>
+                        <div class="three item" id="RankItem3">
+                            <div class="top3_pos">3</div>
+                            <div id="item3_pic" class="top3_pic"></div>
+                            <div id="item3_pic2" class="top3_pic2 bronze" style="background-image: url('trophy_bronze.svg')"></div>
+                            <div id="item3_name" class="top3_name">RANK3</div>
+                            <div id="item3_score" class="top3_score">100%</div>
                         </div>
                     </div> 
                     <div class="list">
@@ -137,7 +102,7 @@
                         </div>
                         <div class="item" id="RankItem6">
                             <div class="list_pos">
-                            5
+                            6
                             </div>
                             <div id="item6_pic" class="list_pic"></div>
                             <div id="item6_name" class="list_name">
@@ -149,7 +114,7 @@
                         </div>
                         <div class="item" id="RankItem7">
                             <div class="list_pos">
-                            5
+                            7
                             </div>
                             <div id="item7_pic" class="list_pic"></div>
                             <div id="item7_name" class="list_name">
@@ -161,7 +126,7 @@
                         </div>
                         <div class="item" id="RankItem8">
                             <div class="list_pos">
-                            5
+                            8
                             </div>
                             <div id="item8_pic" class="list_pic"></div>
                             <div id="item8_name" class="list_name">
@@ -173,7 +138,7 @@
                         </div>
                         <div class="item" id="RankItem9">
                             <div class="list_pos">
-                            5
+                            9
                             </div>
                             <div id="item9_pic" class="list_pic"></div>
                             <div id="item9_name" class="list_name">
@@ -185,7 +150,7 @@
                         </div>
                         <div class="item" id="RankItem10">
                             <div class="list_pos">
-                            5
+                            10
                             </div>
                             <div id="item10_pic" class="list_pic"></div>
                             <div id="item10_name" class="list_name">
